# Gui-Control-Grinding-Robot

./: README.md
grinding_robot/: CMakeLists.txt  package.xml
grinding_robot/action/: drivemotor.action  laser.action
grinding_robot/src/: .MyDriveMotor.cpp.swp  .MyDriveMotor.h.swp  .main.cpp.swp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MotorCmd.cpp  MotorCmd.h  PIDControl.cpp  PIDControl.h  backlaser.xml  camera.xml  imageview.cpp  imageview.h  laser.xml  main.cpp
grinding_robot/src/old code/: BaslerMultipleCamera.cpp  BaslerMultipleCamera.h
mypcl/: CMakeLists.txt  package.xml
mypcl/action/: scan.action
myscan/: CMakeLists.txt  package.xml
myscan/launch/: jetson.launch  piros.launch  piubuntu.launch  piubuntu2.launch  piubuntu3.launch  piubuntupose.launch  robot.launch  viewcloud.launch
